tests/tests/errors/2009-2.vb
'#compiler-options:/debug-:full
'#compiler-message:Command line error BC2009 : option 'debug' can be followed only by '+' or '-'
'#exit-code:1